--- a/7siniftest-trk.html
+++ b/7siniftest-trk.html
@@ -39,7 +39,7 @@
 					<nav id="nav">
 						<ul>
 							<li class="active"><a href="http://batuhanemrezengin-canli/7siniftest">Testler</a></li>
-                                                        <li class="active"><a href="http://batuhanemrezengin.tr.gg">Geri Dön <---</a></li>
+                                                        <li class="active"><a href="http://batuhanemrezengin-7sinif-turkce.tr.gg">Geri Dön <---</a></li>
 						</ul>
 					</nav>
 
