--- a/7siniftest-trk.html
+++ b/7siniftest-trk.html
@@ -13,6 +13,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<meta name="google-site-verification" content="EnDT_iQv80wC1oMV4_aMW0yuTvNNcV07iaaioQ367Zk" />
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-panels.min.js"></script>
 		<script src="js/init.js"></script>
