--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
 		<meta name="google-site-verification" content="EnDT_iQv80wC1oMV4_aMW0yuTvNNcV07iaaioQ367Zk" />
+		<meta name = "yandex-verification" content = "d998be14837f05d6" />
 	</head>
 	<body class="homepage">
 
