--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					
 				<!-- Logo -->
 					<div id="logo">
-						<h1><a href="#">batuhanemrezengin 7.Sınıf testler</a></h1>
+						<h1><a href="#">batuhanemrezengin 7.Sınıf</a></h1>
 						<span>batuhanemrezengin.tr.gg'nin bir alt sayfasıdır bu site</span>
 					</div>
 				
@@ -47,14 +47,14 @@
 		<div id="main">
 			<div class="container">
 				<header>
-					<h2>Teslerimiz:</h2>
+					<h2>Testlerimiz:</h2>
 				</header>
 				<div class="row">
 					<div class="3u">
 						<section>
 							<a href="#" class="image full"><img src="images/pics01.jpg" alt="" /></a>
 							<p>Yeni gelen türkçe testimizi bence bi çöz</p>
-							<a href="#" class="button">Teste git!</a>
+							<a href="https://forms.gle/N6ppmu2PQFwEErg29" class="button">Teste git!</a>
 						</section>
 					</div>
 					<div class="3u">
