--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<meta name="google-site-verification" content="EnDT_iQv80wC1oMV4_aMW0yuTvNNcV07iaaioQ367Zk" />
 		<meta name = "yandex-verification" content = "d998be14837f05d6" />
+		<script src="//code.jivosite.com/widget/y4w6REAcMx" async></script>
 	</head>
 	<body class="is-preload">
 
