--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<section class="wrapper">
 				<div class="inner">
 					<header class="special">
-						<h2>batuhanemrezengin.tr.gg kimdir?</h2>
+						<h2>batuhanemrezengin.tr.gg nedir?</h2>
 						<p>Biz yaklaşık 2 yıldır sizlere farklı farklı konularda yardımda bulunmaya çalışan bir ekibiz</p></br></br></br>
                                                 <p>Alt bölümden bizim diğer ayrıcaklarımız yazılıdır.</p>
 					</header>
