--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<meta name="google-site-verification" content="EnDT_iQv80wC1oMV4_aMW0yuTvNNcV07iaaioQ367Zk" />
 		<meta name = "yandex-verification" content = "d998be14837f05d6" />
-		<script src="//code.jivosite.com/widget/y4w6REAcMx" async></script>
 	</head>
 	<body class="is-preload">
 
@@ -52,7 +51,7 @@
 									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
 									<h3>Bilgileriniz saklıdır</h3>
 								</header>
-								<p>Sitemiz, sizin özel bilgilerinizi(doğum tarihi,yaş,kart numarası) hiçbir şekilde kopyalamaz.</p>
+								<p>Sitemiz, girdiğiniz özel bilgilerinizi(doğum tarihi,yaş,kart numarası) hiçbir şekilde kopyalamaz.</p>
 							</div>
 						</section>
 						<section>
